# advent-of-code-2021

./: .gitignore  README.md  pyproject.toml
01/: P1.py  P2.py
02/: P1.py  P2.py
03/: P1.py  P2.py
04/: P1.py  P2.py
05/: P1.py  P2.py
06/: P1.py  P2.py
07/: P1.py  P2.py
08/: P1.py  P2.py
09/: P1.py  P2.py
10/: P1.py  P2.py
11/: P1.py  P2.py
12/: P1.py  P2.py
13/: P1.py  P2.py
14/: P1.py  P2.py
15/: P1.py  P2.py
16/: P1.py  P2.py
17/: P1.py  P2.py
18/: P1.py  P2.py  node.py  test_modname.py
19/: P1.py  P2.py
20/: P1.py
21/: P1.py  P2.py
22/: P1.py  P2.py
23/: P1.py  P2.py
25/: P1.py
