[tool.poetry]
name = "modname"
version = "0.1.0"
description = ""
authors = ["Renzo Crisostomo <renzo@crisostomo.me>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
